--- a/src/java/settings.properties
+++ b/src/java/settings.properties
@@ -3,3 +3,4 @@ pass = root
 dbNname=employeedb
 url=jdbc:mysql://localhost:3306/
 driveName=com.mysql.cj.jdbc.Driver
+apiurl="https://jsonplaceholder.typicode.com/users"
